# intake-alphabetsoup

./: LICENSE  README.md  pyproject.toml
intake_alphabetsoup/: __init__.py  synthetic.py
tests/: test_intake_alphabetsoup.py
